; ModuleID = '/home/carl/AnghaBench/reactos/win32ss/user/user32/windows/extr_dialog.c_DEFDLG_SetDefId.c'
source_filename = "/home/carl/AnghaBench/reactos/win32ss/user/user32/windows/extr_dialog.c_DEFDLG_SetDefId.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@WM_GETDLGCODE = common dso_local global i32 0, align 4
@DLGC_UNDEFPUSHBUTTON = common dso_local global i32 0, align 4
@DLGC_BUTTON = common dso_local global i32 0, align 4
@FALSE = common dso_local global i32 0, align 4
@DLGC_DEFPUSHBUTTON = common dso_local global i32 0, align 4
@BM_SETSTYLE = common dso_local global i32 0, align 4
@BS_PUSHBUTTON = common dso_local global i32 0, align 4
@TRUE = common dso_local global i32 0, align 4
@BS_DEFPUSHBUTTON = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i64, %struct.TYPE_3__*, i32)* @DEFDLG_SetDefId to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @DEFDLG_SetDefId(i64 %0, %struct.TYPE_3__* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i64, align 8
  %6 = alloca %struct.TYPE_3__*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i64, align 8
  %10 = alloca i64, align 8
  %11 = alloca i32, align 4
  store i64 %0, i64* %5, align 8
  store %struct.TYPE_3__* %1, %struct.TYPE_3__** %6, align 8
  store i32 %2, i32* %7, align 4
  store i32 0, i32* %8, align 4
  %12 = load i64, i64* %5, align 8
  %13 = load i32, i32* %7, align 4
  %14 = call i64 @GetDlgItem(i64 %12, i32 %13)
  store i64 %14, i64* %10, align 8
  %15 = load %struct.TYPE_3__*, %struct.TYPE_3__** %6, align 8
  %16 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  store i32 %17, i32* %11, align 4
  %18 = load i32, i32* %7, align 4
  %19 = load %struct.TYPE_3__*, %struct.TYPE_3__** %6, align 8
  %20 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %19, i32 0, i32 0
  store i32 %18, i32* %20, align 4
  %21 = load i64, i64* %10, align 8
  %22 = icmp ne i64 %21, 0
  br i1 %22, label %23, label %34

23:                                               ; preds = %3
  %24 = load i64, i64* %10, align 8
  %25 = load i32, i32* @WM_GETDLGCODE, align 4
  %26 = call i32 @SendMessageW(i64 %24, i32 %25, i32 0, i32 0)
  store i32 %26, i32* %8, align 4
  %27 = load i32, i32* @DLGC_UNDEFPUSHBUTTON, align 4
  %28 = load i32, i32* @DLGC_BUTTON, align 4
  %29 = or i32 %27, %28
  %30 = and i32 %26, %29
  %31 = icmp ne i32 %30, 0
  br i1 %31, label %34, label %32

32:                                               ; preds = %23
  %33 = load i32, i32* @FALSE, align 4
  store i32 %33, i32* %4, align 4
  br label %80

34:                                               ; preds = %23, %3
  %35 = load i64, i64* %5, align 8
  %36 = load i32, i32* %11, align 4
  %37 = call i64 @GetDlgItem(i64 %35, i32 %36)
  store i64 %37, i64* %9, align 8
  %38 = load i64, i64* %9, align 8
  %39 = icmp ne i64 %38, 0
  br i1 %39, label %40, label %47

40:                                               ; preds = %34
  %41 = load i64, i64* %9, align 8
  %42 = load i32, i32* @WM_GETDLGCODE, align 4
  %43 = call i32 @SendMessageW(i64 %41, i32 %42, i32 0, i32 0)
  %44 = load i32, i32* @DLGC_DEFPUSHBUTTON, align 4
  %45 = and i32 %43, %44
  %46 = icmp ne i32 %45, 0
  br i1 %46, label %50, label %47

47:                                               ; preds = %40, %34
  %48 = load i64, i64* %5, align 8
  %49 = call i64 @DEFDLG_FindDefButton(i64 %48)
  store i64 %49, i64* %9, align 8
  br label %50

50:                                               ; preds = %47, %40
  %51 = load i64, i64* %9, align 8
  %52 = icmp ne i64 %51, 0
  br i1 %52, label %53, label %63

53:                                               ; preds = %50
  %54 = load i64, i64* %9, align 8
  %55 = load i64, i64* %10, align 8
  %56 = icmp ne i64 %54, %55
  br i1 %56, label %57, label %63

57:                                               ; preds = %53
  %58 = load i64, i64* %9, align 8
  %59 = load i32, i32* @BM_SETSTYLE, align 4
  %60 = load i32, i32* @BS_PUSHBUTTON, align 4
  %61 = load i32, i32* @TRUE, align 4
  %62 = call i32 @SendMessageW(i64 %58, i32 %59, i32 %60, i32 %61)
  br label %63

63:                                               ; preds = %57, %53, %50
  %64 = load i64, i64* %10, align 8
  %65 = icmp ne i64 %64, 0
  br i1 %65, label %66, label %78

66:                                               ; preds = %63
  %67 = load i32, i32* %8, align 4
  %68 = load i32, i32* @DLGC_UNDEFPUSHBUTTON, align 4
  %69 = and i32 %67, %68
  %70 = icmp ne i32 %69, 0
  br i1 %70, label %71, label %77

71:                                               ; preds = %66
  %72 = load i64, i64* %10, align 8
  %73 = load i32, i32* @BM_SETSTYLE, align 4
  %74 = load i32, i32* @BS_DEFPUSHBUTTON, align 4
  %75 = load i32, i32* @TRUE, align 4
  %76 = call i32 @SendMessageW(i64 %72, i32 %73, i32 %74, i32 %75)
  br label %77

77:                                               ; preds = %71, %66
  br label %78

78:                                               ; preds = %77, %63
  %79 = load i32, i32* @TRUE, align 4
  store i32 %79, i32* %4, align 4
  br label %80

80:                                               ; preds = %78, %32
  %81 = load i32, i32* %4, align 4
  ret i32 %81
}

declare dso_local i64 @GetDlgItem(i64, i32) #1

declare dso_local i32 @SendMessageW(i64, i32, i32, i32) #1

declare dso_local i64 @DEFDLG_FindDefButton(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
